# AMS-Ticket-Analytics

./: .gitignore  Agents.md.txt  README.md  run_GenAIworkbench.bat  run_backend.bat  run_frontend.bat  run_genai_frontend.bat  seed_default_data.bat
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260615_0001_initial_foundation.py  20260615_0002_add_uploaded_file_saved_filename.py  20260615_0003_add_ticket_raw_row_source_filename.py  20260616_0004_dashboard_foundation.py  20260617_0005_mapping_template_normalized_field_unique.py  20260617_0006_add_upload_period_metadata.py  20260617_0007_upload_batch_lifecycle.py  20260618_0008_dashboard_performance_indexes.py  20260618_0009_incident_sla_uploads.py  20260619_0010_application_dimension_enrichment.py  20260620_0011_application_inventory.py  20260620_0012_scope_split_vendor_sla.py  20260621_0013_sla_upload_dedup.py  (+40 more)
backend/app/: __init__.py  main.py
backend/docs/: dashboard_filter_cache.md
backend/scripts/: __init__.py  seed_default.py
backend/tests/: test_application_dimensions.py  test_application_inventory.py  test_assignment_group_master_reference.py  test_basis_security_assignment_groups.py  test_config.py  test_dashboard_api.py  test_dashboard_filter_facts.py  test_genai_api.py  test_genai_chart_editing.py  test_genai_charts.py  test_genai_governed_tools.py  test_genai_langgraph_agent.py  test_health.py  test_in_scope_assignment_groups.py  test_incident_sla.py  test_incident_sla_dashboard.py  test_ingestion_parser.py  test_llm_client.py  test_mapping_normalization.py  test_models.py  test_mvp1_single_table_scope.py  test_performance_trends.py  test_prompt_10_2_scope_reset_sla.py  test_ticket_automation_rules.py  test_upload_lifecycle.py  test_upload_periods.py  test_upload_validation.py  test_workbench_settings.py
frontend/: index.html  (+3 more)
(+183 files in other folders)
