[project]
name = "ams-ticket-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend for AMS Ticket Intelligence."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
